--- a/modules/localgov_netcall_ai_widget/localgov_netcall_ai_widget.libraries.yml
+++ b/modules/localgov_netcall_ai_widget/localgov_netcall_ai_widget.libraries.yml
@@ -2,9 +2,13 @@ ai-widget-init:
   js:
     js/ai-widget-init.js: {}
   header: true
+  dependencies:
+    - core/drupal
 
 ai-widget:
   js:
     js/ai-widget.js: {}
   dependencies:
+    - core/drupal
+    - core/drupalSettings
     - localgov_netcall_ai_widget/ai-widget-init
