--- a/modules/localgov_netcall_ai_widget/localgov_netcall_ai_widget.info.yml
+++ b/modules/localgov_netcall_ai_widget/localgov_netcall_ai_widget.info.yml
@@ -3,3 +3,4 @@ type: module
 description: 'Adds the Netcall AI widget to your website.'
 package: LocalGov Drupal
 core_version_requirement: ^10 || ^11
+configure: localgov_netcall_ai_widget.settings
