updates config schema

--- a/modules/localgov_netcall_ai_widget/config/install/localgov_netcall_ai_widget.settings.yml
+++ b/modules/localgov_netcall_ai_widget/config/install/localgov_netcall_ai_widget.settings.yml
@@ -1,4 +1,3 @@
-roles:
-  administrator: administrator
-  anonymous: 0
-  authenticated: 0
+workspace_id: ''
+partition_id: ''
+partition_overrides: ''
