feat: support Drupal 11

--- a/localgov_netcall.info.yml
+++ b/localgov_netcall.info.yml
@@ -2,4 +2,4 @@ type: module
 name: LocalGov Netcall
 description: Netcall integration.
 package: LocalGov Drupal
-core_version_requirement: '>=10'
+core_version_requirement: ^10 || ^11
